syntax = "proto3";

package org.volunteered.libs.user.v1;

option java_multiple_files = true;
option java_outer_classname = "UserServiceProto";
option java_package = "org.volunteered.libs.user.v1";

import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "org/volunteered/libs/proto/common/v1/common.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (org.volunteered.libs.proto.common.v1.User);
  rpc GetUserById(GetUserByIdRequest) returns (org.volunteered.libs.proto.common.v1.User);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (org.volunteered.libs.proto.common.v1.User);
  rpc UpdateUser(org.volunteered.libs.proto.common.v1.User) returns (org.volunteered.libs.proto.common.v1.User);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 4;
  string country = 5 [(validate.rules).string = {len: 2}];
}

message GetUserByIdRequest {
  int64 id = 1;
}

message GetUserByEmailRequest {
  string email = 1 [(validate.rules).string.email = true];
}

message DeleteUserRequest {
  int64 id = 1;
}
